# webradio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac  play.sh  stop.sh
src/: Makefile.am  debug.sh  defines.h  play.sh  webradio.c
