cmake_minimum_required(VERSION 3.1.3)
project(Webradio)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SOUP REQUIRED libsoup-2.4)
pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
pkg_check_modules(GLIB REQUIRED glib-2.0)
pkg_check_modules(GIO REQUIRED gio-2.0)
pkg_check_modules(GIOUNIX REQUIRED gio-unix-2.0)
include_directories(${SOUP_INCLUDE_DIRS} ${GOBJECT_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${GIO_INCLUDE_DIRS} ${GIOUNIX_INCLUDE_DIRS})
link_directories(${SOUP_LIBRARY_DIRS} ${GOBJECT_LIBRARY_DIRS} ${GLIB_LIBRARY_DIRS} ${GIO_LIBRARY_DIRS} ${GIOUNIX_LIBRARY_DIRS})
add_definitions(${SOUP_CFLAGS_OTHER} ${GOBJECT_CFLAGS_OTHER} ${GLIB_CFLAGS_OTHER} ${GIO_CFLAGS_OTHER} ${GIOUNIX_CFLAGS_OTHER})
add_executable(webradio.out webradio.c)
target_link_libraries(webradio.out ${SOUP_LIBRARIES} ${GOBJECT_LIBRARIES} ${GLIB_LIBRARIES} ${GIO_LIBRARIES} ${GIOUNIX_LIBRARIES})
