bin_PROGRAMS = webradio
webradio_SOURCES = webradio.c
dist_webradio_SOURCES = defines.h play.sh stop.sh debug.sh
webradio_CFLAGS = $(SOUP_CFLAGS) $(GOBJECT_CFLAGS) $(GLIB_CFLAGS) $(GIO_CFLAGS) $(GIOUNIX_CFLAGS)
webradio_LDFLAGS = $(SOUP_LIBS) $(GOBJECT_LIBS) $(GLIB_LIBS) $(GIO_LIBS) $(GIOUNIX_LIBS)

